// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`importMapReplace > should apply custom mappings 1`] = `
"
  /** importMapReplace */
  import CustomPackage from "http://localhost:3000/*custom-package?bundle";"
`;

exports[`importMapReplace > should ignore absolute URLs 1`] = `
"
  /** importMapReplace */
  import MyComponent from "http://localhost:3000/MyComponent.js";"
`;

exports[`importMapReplace > should ignore relative URLs 1`] = `
"
  /** importMapReplace */
  import MyComponent from "http://localhost:3000/live/MyComponent/index.js";"
`;

exports[`importMapReplace > should not do anything 1`] = `
"
  /** importMapReplace */
   eturn e[t] === r ||
              (e[t] = r,
                (t === "prop" || t === "value" || t === "name" ||
                  t === "params" || t === "important" || t === "text") &&
                e.markDirty()),
              !0;"
`;

exports[`importMapReplace > should process this 1`] = `
"
  /** importMapReplace */
  eturn d.className=f,a&&(d.ref=a),O.createElement(O.Fragment,null,O.createElement(On,{cache:t,serialized:m,isStringTag:typeof c=="string"}),O.createElement(c,d))}),dr=Rn;import "http://localhost:3000/reactMod.mjs";;var va=Y(Yr());var xa=Z.Fragment;function Sa(e,t,a){return me.call(t,"css")?Z.jsx(dr,pr(e,t),a):Z.jsx(e,t,a)}function Ea(e,t,a){return me.call(t,"css")?Z.jsxs(dr,pr(e,t),a):Z.jsxs(e,t,a)}";"
`;

exports[`importMapReplace > should replace DYNAMID shadcdn imports 1`] = `
"
  /** importMapReplace */
  import React from "http://localhost:3000/@/components/ui/alert.mjs";"
`;

exports[`importMapReplace > should replace coder44  1`] = `
"
  /** importMapReplace */
  
    import { css } from "http://localhost:3000/emotion.mjs";
    import $ from "http://localhost:3000/reactMod.mjs";

    import { css  as $kdkd } from "http://localhost:3000/emotion.mjs";

    import { useEffect, useState, useRef } from "http://localhost:3000/reactMod.mjs";
    import type { FC } from "http://localhost:3000/reactMod.mjs";
    import QRTerminal from "http://localhost:3000/*qrcode-terminal?bundle";
    "
`;

exports[`importMapReplace > should replace dynamic imports 1`] = `
"
  /** importMapReplace */
  const React = import("http://localhost:3000/reactMod.mjs");"
`;

exports[`importMapReplace > should replace dynamic imports 2`] = `
"
  /** importMapReplace */
  const React = import("http://localhost:3000/reactMod.mjs");"
`;

exports[`importMapReplace > should replace dynamic imports 3`] = `
"
  /** importMapReplace */
  const module = import("http://localhost:3000/*some-module?bundle");"
`;

exports[`importMapReplace > should replace dynamic imports at the end 1`] = `
"
  /** importMapReplace */
  
    import{Buffer as De}from"http://localhost:3000/v125/buffer@6.0.3/es2022/buffer.bundle.mjs"
    let { Mp3Encoder: t } = await import("http://localhost:3000/*lamejs?bundle");
    import{timeDay as _,timeSunday as bt,timeMonday as b,timeThursday as w,timeYear as S,utcDay as $,utcSunday as Vt,utcMonday as V,utcThursday as p,utcYear as F}from"http://localhost:3000/*d3-time?bundle";
      async function loadModule() {
        let{default:c}=await import("http://localhost:3000/*axios?bundle");
        let{default:d}=await import("http://localhost:3000/axios/dist/axios.min.js");
        
        const module = await import("http://localhost:3000/*some-module?bundle");
        // do something with module
      }
        import "http://localhost:3000/jsx.mjs";;
        import "http://localhost:3000/reactMod.mjs";;
        async function y(s){await s(m)}
        export{n as Particles,n as default,y as initParticlesEngine};
    "
`;

exports[`importMapReplace > should replace dynamic imports inside a function 1`] = `
"
  /** importMapReplace */
  
    import{Buffer as De}from"http://localhost:3000/v125/buffer@6.0.3/es2022/buffer.bundle.mjs"
    let { Mp3Encoder: t } = await import("http://localhost:3000/*lamejs?bundle");
    import{timeDay as _,timeSunday as bt,timeMonday as b,timeThursday as w,timeYear as S,utcDay as $,utcSunday as Vt,utcMonday as V,utcThursday as p,utcYear as F}from"http://localhost:3000/*d3-time?bundle";
      async function loadModule() {
        let{default:c}=await import("http://localhost:3000/*axios?bundle");
        let{default:d}=await import("http://localhost:3000/axios/dist/axios.min.js");
        
        const module = await import("http://localhost:3000/*some-module?bundle");
        // do something with module
      }
    "
`;

exports[`importMapReplace > should replace dynamic imports with await 1`] = `
"
  /** importMapReplace */
  const module = await import("http://localhost:3000/*some-module?bundle");"
`;

exports[`importMapReplace > should replace shadcdn  1`] = `
"
  /** importMapReplace */
  
    import { css } from "http://localhost:3000/emotion.mjs";
    import $ from "http://localhost:3000/reactMod.mjs";
    import { Button } from "http://localhost:3000/@/components/ui/button.mjs";

    import { css  as $kdkd } from "http://localhost:3000/emotion.mjs";

    import { useEffect, useState, useRef } from "http://localhost:3000/reactMod.mjs";
    import type { FC } from "http://localhost:3000/reactMod.mjs";
    import QRTerminal from "http://localhost:3000/*qrcode-terminal?bundle";
    "
`;

exports[`importMapReplace > should replace the live urls 1`] = `
"
  /** importMapReplace */
  import Box from "http://localhost:3000/live/Box";"
`;

exports[`importMapReplace > should replace top-level exports 1`] = `
"
  /** importMapReplace */
  export { default } from "http://localhost:3000/reactMod.mjs";"
`;

exports[`importMapReplace > should replace top-level imports 1`] = `
"
  /** importMapReplace */
  import React from "http://localhost:3000/reactMod.mjs";"
`;

exports[`importMapReplace > should replace top-level imports with dot in the path 1`] = `
"
  /** importMapReplace */
  import React from "http://localhost:3000/*react.gl?bundle";"
`;

exports[`importMapReplace > should replace top-leveldd imports with dot in the path 1`] = `
"
  /** importMapReplace */
  import React from "http://localhost:3000/live/box/index.js";"
`;
